--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </div>
 
         <div class="halfWidth">
-            <img src="images/do not use this pic.png" alt="">
+            <img src="images/photo-01.png" alt="">
         </div>
     </section>
 
     <!-- section 02 -->
     <section>
         <div class="halfWidth">
-            <img src="images/do not use this pic2.png" alt="">
+            <img src="images/photo-02.png" alt="">
         </div>
 
         <div class="halfWidth">
