--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="topBanner">
         <div class="halfWidth">
             <h1> HELLO, I'M </h1>
-            <h1> <span class="orangeHighlight"> ROB DAVIDSON </span> </h1>
+            <h1> <span class="orangeHighlight"> AHMAD TARIQUE HASAN </span> </h1>
             <p> A full stack allround designer that placerat in massa consectetur. </p>
             <a class="linkButton" href="https://www.linkedin.com/in/ahmad-bappy/" target="_blank"> Hire Me! </a>
         </div>
